[dependencies]
hex = "0.4"
iota-crypto = "0.23"
iota_stronghold = "1"
log = { workspace = true }
rand_chacha = { version = "0.3.1", optional = true }
rand_core = { version = "0.6.4", features = ["getrandom"], optional = true }
rust-argon2 = { version = "1", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
thiserror = { workspace = true }
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
rand = "0.8"
rusty-fork = "0.3"

[features]
default = ["kdf"]
kdf = ["dep:rust-argon2", "dep:rand_chacha", "dep:rand_core"]

[lib]
path = "Source/lib.rs"

[package]
authors = { workspace = true }
description = "Store secrets and keys using the IOTA Stronghold encrypted database."
edition = { workspace = true }
license-file = { workspace = true }
name = "tauri-plugin-stronghold"
rust-version = { workspace = true }
version = "0.0.0"
