[dependencies]
hex = "0.4"
iota-crypto = "0.23"
iota_stronghold = "2"
log = { version = "0.4.25" }
rand_chacha = { version = "0.9.0", optional = true }
rand_core = { version = "0.9.1", features = ["getrandom"], optional = true }
rust-argon2 = { version = "2", optional = true }
serde = { version = "1.0.217" }
serde_json = { version = "1.0.138" }
tauri = { version = "2.2.5" }
thiserror = { version = "2.0.11" }
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
rand = "0.9"
rusty-fork = "0.3"

[features]
default = ["kdf"]
kdf = ["dep:rust-argon2", "dep:rand_chacha", "dep:rand_core"]

[lib]
path = "Source/lib.rs"

[package]
authors = ["Tauri Programme within The Commons Conservancy"]
description = "Store secrets and keys using the IOTA Stronghold encrypted database."
edition = "2024"
license-file = "LICENSE"
name = "tauri-plugin-stronghold-read-only"
rust-version = "1.85.0"
version = "0.0.0"
